fix overflow in movie-detail

--- a/src/app/components/movie-detail/movie-detail.component.css
+++ b/src/app/components/movie-detail/movie-detail.component.css
@@ -9,7 +9,7 @@
 
 #img_container img {
   height: 980px;
-  width: 100%;
+  width: 90%;
   z-index: -1;
   filter: brightness(50%);
   position: absolute;
